--- a/studRegistration.html
+++ b/studRegistration.html
@@ -2,20 +2,18 @@
 <html>
     <head>
         <title>
-           BUP Library Managemenr System
+           BUP Library Management System
         </title>
-        <link rel="stylesheet" type="text/css" href="studRegisterStyle.css">
+        <link rel="stylesheet" type="text/css" href="CSS/adminRegisterStyle.css">
     </head>
-    <body background="Images/home.jpg">
+    <body background="Images/BUP_Lake.jpg">
         <center>
-             <div>
-                <img src="Images/home1.jpg" class = "topImage">  
-            </div>
+
             <br>
             <div id = "bottomLayout">
                 <div  id ="bottom-left"><a href = "adminRegister.html" id = "linkAdmin"><img src = "Images/studRegistration.png" height = "200" width = "200" id = "imageL"></a><br><p id ="bottomContentLeft"> Student Registration</p></div>
                 <div id ="bottom-right">
-                    <form action="studRegistration.html" method = "post">
+                    <form>
                         <table id = "formLayout" cellspacing="10">
                             <tr id = "rowLayout"><td id="rowHeading"> Username : </td><td><input type="text" name="username" id = "input" required></td></tr>
                             <tr id = "rowLayout"><td id="rowHeading"> Password : </td><td><input type="password" name="password" id = "input" required></td></tr>
