--- a/studentHome.html
+++ b/studentHome.html
@@ -4,13 +4,10 @@
         <title>
            BUP Library Managemenr System
         </title>
-        <link rel="stylesheet" type="text/css" href="studHomeStyle.css">
+        <link rel="stylesheet" type="text/css" href="CSS/styleHome.css">
     </head>
-    <body background="Images/home.jpg">
+    <body background="Images/bup_logowala.jpg">
         <center>
-             <div>
-                <img src="Images/home1.jpg" class = "topImage">  
-            </div>
             <br>
             <div id = "bottomLayout">
 				<br><h2 id = "linkAdmin"> STUDENT </h2>
